assets/styles/_allgo.scss
//	I M P O R T S

//@import "bourbon/bourbon";
//@import "neat/neat";

@import "allgo-fonts";
// Linea Music: "linea-music" (RT)
// Linea Weather: "linea-weather" (Fav)
// Avenir Medium: "avenir-medium" (Headers)
// Avenir Light: "avenir-light" (Navbar)
// Avenir Roman: "avenir-roman" (Content)
// Nexa Bold: 



//	V A R I A B L E S

$main-color: #1B56F0; // blue
$white: #EAEAEA; // grayish white
$true-white: #fff; // true white
$true-black: #000; // true black
$light-gray: #ADADAD; // light gray

.logo {
	margin-top: -13px;
	margin-left: 30%;
	height: 2.5%;
	width: 2.5%;
}


.main_h {
  position: fixed;
  top: 0px;
  max-height: 170px;
  z-index: 999;
  width: 100%;
  padding-top: 17px;
  background: none;
  overflow: hidden;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  opacity: 0;
  top: -100px;
  padding-bottom: 6px;
}
@media only screen and (max-width: 766px) {
  .main_h {
    padding-top: 25px;
  }
}

.open-nav {
 	height: 170px !important;
	
	.row {
		nav {
			ul {
				li {
					text-align:center;
					margin-left: none;
					
					a {
						-webkit-font-smoothing: antialiased;
					}


					

				}
			}
		}
	}
}
.open-nav .mobile-toggle {
  transform: rotate(-90deg);
  -webkit-transform: rotate(-90deg);
}

.sticky {
  background-color: rgba(27, 86, 240, 0.93);
  opacity: 1;
  top: 0px;
}

@media only screen and (max-width: 766px) {
  .logo {
    float: none;
  }
}

nav {
  float: right;
  width: 60%;
}
@media only screen and (max-width: 766px) {
  nav {
    width: 100%;
  }
}
nav ul {
  list-style: none;
  overflow: hidden;
  text-align: right;
  float: right;
  margin-top: -18px;
}
@media only screen and (max-width: 766px) {
  nav ul {
    padding-top: 10px;
    margin-bottom: 22px;
    float: left;
    text-align: center;
    width: 95%;
  }
}
nav ul li {
  display: inline-block;
  margin-left: 35px;
  line-height: 1.5;
}

nav ul li a {
	-webkit-font-smoothing: antialiased;
}
@media only screen and (max-width: 766px) {
  nav ul li {
    width: 100%;
    padding: 7px 0;
    margin: 0;
  }
}
nav ul a {
  color: $true-white;
  font-size: 12px;
}

.mobile-toggle {
  display: none;
  cursor: pointer;
  font-size: 20px;
  position: absolute;
  right: 22px;
  top: 0;
  width: 30px;
  -webkit-transition: all 200ms ease-in;
  -moz-transition: all 200ms ease-in;
  transition: all 200ms ease-in;
}
@media only screen and (max-width: 766px) {
  .mobile-toggle {
    display: block;
  }

  .logo-mobile {
  	margin-top: -20px;
	margin-left: 50%;
	height: 5%;
	width: 5%;
  }
}
.mobile-toggle span {
  width: 30px;
  height: 4px;
  margin-bottom: -2px;
  border-radius: 5000px;
  background: $true-white;
  display: block;
  margin-top: -8px;
}

.row {
  width: 100%;
  max-width: 940px;
  margin: 0 auto;
  position: relative;
  padding: 0 2%;
}



.content {
  padding: 50px 2% 250px;
}


.mouse {
  display: block;
  margin: 0 auto;
  width: 26px;
  height: 46px;
  border-radius: 13px;
  border: 2px solid #e8f380;
  position: absolute;
  bottom: 40px;
  position: absolute;
  left: 50%;
  margin-left: -26px;
}
.mouse span {
  display: block;
  margin: 6px auto;
  width: 2px;
  height: 2px;
  border-radius: 4px;
  background: #e8f380;
  border: 1px solid transparent;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-name: scroll;
  animation-name: scroll;
}

@-webkit-keyframes scroll {
  0% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }

  100% {
    opacity: 0;
    -webkit-transform: translateY(20px);
    transform: translateY(20px);
  }
}
@keyframes scroll {
  0% {
    opacity: 1;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }

  100% {
    opacity: 0;
    -webkit-transform: translateY(20px);
    -ms-transform: translateY(20px);
    transform: translateY(20px);
  }
}


//	S T Y L E S

a {
	
	color: $main-color;

	img {
		text-decoration: none;
	}
}

a:hover {
	text-decoration: none;
	color: $main-color;
	text-shadow: 1px 0 0 #fff, -1px 0 0 #fff;
	background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
	background-repeat: repeat-x;
	background-position: 0 95%;
	-webkit-background-size: 100% 1px;
	background-size: 100% 1px;
}

a:-webkit-any-link{
	text-decoration:none !important;
}


body {
	background-color: $white;
	font-size: 100%;
}

h1 {
	font-family: avenir-medium;
	font-size: 1.1em;
	margin-bottom: 10px;

}

h2 {
	font-family: avenir-light;
	font-size: 0.8em;
}

h3 {
	text-align: center;
	font-family: avenir-roman;
	color: $main-color;
	margin-left: 15px;
	margin-right: 15px;
}

h4 {
	@extend h3;
}


//			NAVBAR   B E G I N S




.margin-right {
	margin-right: 7px;
}

.links-nav {
	margin-top: 7px;
	color: $true-white;
}

.links-nav:hover {
	text-decoration: underline;
	
}

.descarga {
	@extend .links-nav;

}


.blue-bg {
	background-color: $main-color;
	color: $true-white;
	font-size: 0.6em;
	font-family: avenir-light;
	box-shadow: 1px 1px 1px 1px $light-gray;
	margin-bottom: 1px;
	position: fixed;
	z-index: 10;
	-webkit-box-shadow: 0 1px 3px 0 transparent;
  	box-shadow: 0 1px 3px 0 transparent;
  	-webkit-transition: all 240ms ease-in-out;
  	width: 100%;
  	height: 30px;
}

nav {
	margin-bottom: 5px;
	background-color: $main-color;
	
	ul {
		text-align: center;
		

		li {
			

			a {
				color: $true-white;


			}

			a:hover {
				color: $true-white;
				text-decoration: underline;
				text-shadow: 1px 0 0 $main-color, -1px 0 0 $main-color;
		background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
		background-repeat: repeat-x;
		background-position: 0 95%;
		-webkit-background-size: 100% 1px;
		background-size: 100% 1px;

			}
		}
	}
}

//			NAVBAR   E N D S

//			INTRODUCTION  B E G I N S

.true-white-bg {
	background-color: $true-white;
	color: $true-black;
	font-size: 1.1em;
	box-shadow: 1px 1px 1px 1px $light-gray;
}

.hashtag-allgo {
	margin-top: 30px;
	color: $main-color;
}

.intro {
	margin-top: 30px;
	margin-left: 30px;
	margin-right: 30px;
}

.rules {
	margin-top: 20px;
	color: $main-color;
	font-size: 0.6em;
	margin-bottom: -15px;
}

//			INTRODUCTION    E N D S

//			CARD    B E G I N S


.container {

	//@include outer-container;
	position: inherit;


	.card {
		//@include span-columns(3);
		//@include omega(4n);
		//display: run-in;
		//vertical-align: top;
		width: 320px;
		background-color: $true-white;
		
		box-shadow: 0px 0px 1px 1px $light-gray;
	    //position: relative;
	    overflow: hidden;
	    margin: 20px;
	
		.first {
			width:640px;
		}

		.photo {
			
		    position: relative;
		    left: 0;
		    right: 0;
		    top: 0;
		    bottom: 0;
		    width: 100%;
		    height: 100%;
		    max-width: 100%;
		    max-height: 100%;
  
		}

		a {
			color: $main-color;
			font-size: 1em;
			text-decoration: none;
		}

		a:hover {
			text-decoration: none;
			color: $main-color;
			text-shadow: 1px 0 0 #fff, -1px 0 0 #fff;
			background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
			background-repeat: repeat-x;
			background-position: 0 95%;
			-webkit-background-size: 100% 1px;
			background-size: 100% 1px;
		}


		a:active {
			text-decoration: none;
			color: $main-color;
			text-shadow: 1px 0 0 #fff, -1px 0 0 #fff;
			background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
			background-repeat: repeat-x;
			background-position: 0 95%;
			-webkit-background-size: 100% 1px;
			background-size: 100% 1px;
		}



	}


	.card:hover {
		box-shadow: 1px 1px 2px 2px $light-gray;
	}



}

.hexagon {
	position: relative;
	display: inline-block;
	width: 60px;
	height: 60px;
	overflow: hidden;
	color: #fff;
	-webkit-mask-image: url('../images/mask.png');
	text-align: center;

			
}


.hexagon .content{
	height: 60px;
	width: 60px;
	margin: auto;
	margin-top: 16px;
			
}


.logo-card {
	height: 15%;
	width: 15%;
	margin-bottom: 10px;
	margin-top: 10px;
}

.tweet,
.user,
.name,
.date,
.rt-fav {
	color: $true-black;
	font-size: 1em;
	font-family: avenir-light;
	text-align: center;
	padding-top:5px;
}

.tweet {
	margin-bottom: 15px;
	margin-right: 20px;
	margin-left: 20px;
	font-size: 0.9em;
}

.user-photo {
	margin-top: 15px;
}

.name {
	margin-top: 10px;
} 

.name{
	font-size: 1.1em;
}

.user {
	margin-top:-30px;

	a {
		color: $main-color;
		font-size: 1em;
		text-decoration: none;
	}

	a:hover {
		text-decoration: none;
		color: $main-color;
		text-shadow: 1px 0 0 #fff, -1px 0 0 #fff;
		background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
		background-repeat: repeat-x;
		background-position: 0 95%;
		-webkit-background-size: 100% 1px;
		background-size: 100% 1px;
	}

	a:visited {
		text-decoration: none;
		color: $main-color;
		text-shadow: 1px 0 0 #fff, -1px 0 0 #fff;
		background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
		background-repeat: repeat-x;
		background-position: 0 95%;
		-webkit-background-size: 100% 1px;
		background-size: 100% 1px;
	}

	a:active {
		text-decoration: none;
		color: $main-color;
		text-shadow: 1px 0 0 #fff, -1px 0 0 #fff;
		background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
		background-repeat: repeat-x;
		background-position: 0 95%;
		-webkit-background-size: 100% 1px;
		background-size: 100% 1px;
	}
}



.rt {

	font-size: 1.6em;
	color: $light-gray;

}

.fav {

	font-size: 1.6em;
	color: $light-gray;
}

.rt-fav {
	margin-top: 10px;
	margin-bottom: 13px;
}

//			CARD    E N D S

//			ADMIN	B E G I N S

.admin {
	font-family: avenir-light;

	.label {
		color: $main-color;
	}
	
}

.admin-desc {
	top: -5px;
	font-size: 0.7em;
}

//			ADMIN	E N D S

//			CONTEST   B E G I N S

p {
  font-size: 0.8em;
  color: $true-black;
  padding: 40px;

}

.contest-card {
	width: 320px;
	
}

//			CONTEST   E N D S

